--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <p>Sorvete, Paleta, Milkshake são uma das sobremesas mais pedidas de todos os tempos! 
       <strong>O Verão está chegando.</strong>
        Que tal deixar o seu final de tarde ainda mais gostoso experimentando
-      um de nossas delicias?
+      um de nossas delicias? Topa?
     </p>
 
   
